<resources>
    <string name="app_name">i微影-视频制作</string>
    <string name="common_ok">确定</string>
    <string name="common_mark_comma">，</string>
    <string name="common_mark_exclamation">！</string>
    <string name="common_delete">删除</string>
    <string name="common_repeat">回复</string>
    <string name="common_send">发送</string>
    <string name="common_confirm">确认</string>
    <string name="common_submit">提交</string>
    <string name="common_second">%1$ss</string>
    <string name="common_ensure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_clear">清除</string>
    <string name="common_update">升级</string>
    <string name="common_quit">退出</string>
    <string name="common_forward">转发</string>
    <string name="common_notice_title">提示</string>
    <string name="common_next">下一步</string>
    <string name="common_tips_title">温馨提示</string>
    <string name="common_gprs_tips_title">流量提示</string>
    <string name="common_version_check_title">版本检测提示</string>
    <string name="common_tips_no_login">您还未登录，是否前往登录？</string>
    <string name="common_no_movie_data">还没有影片哟~</string>
    <string name="common_no_dynamic_data">还没有动态哟~</string>
    <string name="common_no_fans_data">暂时还没人关注你哦~</string>
    <string name="common_no_relative_friend_data">暂时没有亲友哦~</string>
    <string name="common_no_collection_data">还没有收藏哦~</string>
    <string name="common_no_data">暂时没有数据~</string>
    <string name="common_no_found_data">没有找到相关内容</string>
    <string name="common_no_search_data">暂无用户资料</string>
    <string name="common_network_error">网络开小差啦~</string>
    <string name="common_net_error">网络错误，点击屏幕重试</string>
    <string name="common_net_error_please_try_again">网络出错，请重试</string>
    <string name="common_no_permission_to_open">暂无权限,是否开启权限</string>
    <string name="loading">正在加载中. . .</string>
    <string name="clearing">正在清除数据. . .</string>
    <string name="common_network_not_found">找不到网络...</string>
    <string name="common_search">搜索</string>
    <string name="commom_transform">转换中</string>
    <string name="common_skip">跳过</string>
    <string name="main_tab_label_follow">关注</string>
    <string name="main_tab_label_recommend">推荐</string>
    <string name="main_tab_label_moments">亲友圈</string>
    <string name="dialog_report_content_vulgar">内容低俗</string>
    <string name="dialog_report_ad">广告软文</string>
    <string name="dialog_report_regulation_sensitivity">整治敏感</string>
    <string name="dialog_report_false_content">虚假内容</string>
    <string name="dialog_report_others">其他问题</string>
    <string name="dialog_report_success">举报成功</string>
    <string name="dialog_report_failed">举报失败</string>
    <string name="card_error_tips">身份证识别失败，请重新识别</string>
    <string name="card_scan">正在识别中. . .</string>
    <string name="card_back_tip">请将身份证国徽面放入扫描框内</string>
    <string name="card_front_tip">请将身份证人像面放入扫描框内</string>
    <string name="card_open_camera_error">打开摄像头失败</string>
    <string name="card_click_focus">请点击屏幕对焦</string>
    <string name="card_front_scan_tips">请将身份证人像面对准引导框</string>
    <string name="card_back_scan_tips">请将身份证国徽面对准引导框</string>
    <string name="card_scan_light">"有光斑"</string>
    <string name="load_failed">加载失败,点击重新加载</string>
    <string name="load_end">---  别扯了，没数据了  ---</string>
    <string name="view_no_data">暂无数据</string>
    <string name="view_no_more_media_data">暂时没有更多作品</string>
    <string name="view_no_more_collection_data">暂时没有更多收藏</string>
    <string name="request_loading">正在玩命加载中. . .</string>
    <string name="record_notice_content">退出后拍摄进度将不会保存，是否退出？</string>
    <string name="record_dialog_record_more">影片时间太短了，再拍一会吧~</string>
    <string name="record_dialog_record_publish">影片时间够长了，去发布吧~</string>
    <string name="record_orientation_tips">请横屏拍摄</string>
    <string name="record_local_media">本地上传</string>
    <string name="record_abandon_movie">直接退出后影片将不会保存。可将当前影片保存至草稿箱，便于下次编辑~</string>
    <string name="record_horizontal_tip">横屏拍摄效果更佳哟~</string>
    <string name="record_cache">草稿箱</string>
    <string name="immediate_exit">直接退出</string>
    <string name="preview_movie_title">%1$s / %2$s</string>
    <string name="preview_cliping_movie">正在解析视频. . .</string>
    <string name="preview_cliping_movie_cliping">正在裁剪视频. . .</string>
    <string name="perview_file_not_null">默认的图片不能为空</string>
    <string name="perview_file_not_found">默认的图片文件找不到</string>
    <string name="local_file_error">视频无法播放</string>
    <string name="local_video">视频</string>
    <string name="local_pic">照片</string>
    <string name="local_photo_select_photo">选择多张照片</string>
    <string name="local_photo_more_select_photo">最多只能选10张照片</string>
    <string name="local_video_time_limit">最多只能上传180S的影片</string>
    <string name="local_video_more_five">每次最多只能选10段影片</string>
    <string name="local_video_more_fifty">最多只能选50段影片</string>
    <string name="local_photo_movie">推荐以下 %1$s 段，点击可快速生成影片</string>
    <string name="cache_movie_title">本地草稿箱</string>
    <string name="cache_movie_clear">清空</string>
    <string name="cache_movie_delete_tip">是否删除该草稿内容？</string>
    <string name="identification_click_take_pic">点击方框开始拍摄</string>
    <string name="identification_click_take_pic_notice">将身份证边缘与拍摄边框对齐并水平扫描，注意反光（如图所示）</string>
    <string name="identification_click_take_pic_again">点击重新拍照</string>
    <string name="identification_card">上传身份证自动识别</string>
    <string name="identification_title">补全资料</string>
    <string name="identification_name">姓名</string>
    <string name="identification_address">地址</string>
    <string name="identification_person_card">身份证号码</string>
    <string name="identification_bank_card">银行卡账号</string>
    <string name="identification_bank_card_notice">请正确填写本人的银行卡</string>
    <string name="identification_bank_name">银行名称</string>
    <string name="identification_bank_name_notice">请填写银行名称,如：中国建设银行</string>
    <string name="identification_bank_card_from_country">开户城市</string>
    <string name="identification_bank_card_from">开户行</string>
    <string name="identification_bank_card_from_country_notice">请填写银行卡开户城市，如：深圳</string>
    <string name="identification_bank_card_from_notice">请填写银行卡开户行，如：宝安支行</string>
    <string name="identification_person_card_input_tips">请先识别身份证信息</string>
    <string name="identification_person_card_scan_error">身份证识别错误，请重新识别</string>
    <string name="identification_bank_card_input_tips">请填写银行卡卡号</string>
    <string name="identification_bank_card_name_input_tips">请填写银行卡名称</string>
    <string name="identification_bank_card_from_input_tips">请填写银行卡开户网点</string>
    <string name="identification_phone_tip">请先绑定手机</string>
    <string name="identification_request_error">请求失败,请重新请求</string>
    <string name="identification_heir_name">继承人姓名</string>
    <string name="identification_heir_sex">继承人性别</string>
    <string name="identification_heir_id_card">继承人身份证号码</string>
    <string name="identification_heir_phone">继承人电话</string>
    <string name="identification_heir_name_tips">请填写股份继承人姓名(选填)</string>
    <string name="identification_heir_sex_tips">请填写股份继承人性别(选填)</string>
    <string name="identification_heir_id_card_tips">请填写身份证号码(选填)</string>
    <string name="identification_heir_phone_tips">请填写继承人电话(选填)</string>
    <string name="identification_male">男</string>
    <string name="identification_female">女</string>
    <string name="member_title">会员证</string>
    <string name="member_selector_photo">选择图片</string>
    <string name="member_download">下载</string>
    <string name="member_change_info">修改资料</string>
    <string name="member_select_pic">请选择会员头像</string>
    <string name="member_download_fail">保存相册失败</string>
    <string name="member_download_success">保存相册成功</string>
    <string name="hwpush_ability_value" translatable="false">successRateAnalytics</string>
    <string name="signature_clear">清除</string>
    <string name="signature_title">股份认购协议</string>
    <string name="signature_save_fail">加载失败，请重试</string>
    <string name="signature_saving">正在玩命保存中，请稍等. . .</string>
    <string name="signature_save_tips">请先添加签名</string>
    <string name="signature_save_success">保存相册成功</string>
    <string name="signature_loading">加载中. . .</string>
    <string name="stock_change_info">修改资料</string>
    <string name="stock_book">股份证书</string>
    <string name="stock_downloading">下载中. . .</string>
    <string name="photo_select_minnum">最少选择一张图片</string>
    <string name="photo_select_maxnum">最多选择%1$d张图片</string>
    <string name="photo_select_all_images">所有图片</string>
    <string name="photo_select_total">共%1$d张</string>
    <string name="photo_select_sd_disable">SD卡不可用</string>
    <string name="photo_select_image">图片</string>
    <string name="photo_select_takephoto">拍照</string>
    <string name="photo_select_confirm_format">%1$s(%2$d/%3$d)</string>
    <string name="photo_select_confirm">确定</string>
    <string name="photo_select_open_camera_failure">打开相机失败</string>
    <string name="photo_select_permission_storage_denied">请打开存储空间权限</string>
    <string name="photo_select_permission_camera_denied">请打开相关权限</string>
    <string name="common_about_ivy">关于i微影</string>
    <string name="common_second_p10">%1$ss</string>
    <string name="video_edit_back">退出后编辑内容将不会保存，是否退出？</string>
    <string name="video_edit_delete">删除后你的影片时间将低于5s，是否删除并前往拍摄页面继续拍摄？</string>
    <string name="video_call_record_delete">删除后你的影片时间将低于5s，是否删除并返回？</string>
    <string name="login_hint_input_mobile">请输入手机号</string>
    <string name="login_hint_input_verify_code">请输入验证码</string>
    <string name="login_send_verify_code">发送验证码</string>
    <string name="login_hint_set_password">设置密码(由6–16位字母数字组成)</string>
    <string name="login_hint_reset_password">设置新密码(由6–16位字母数字组成)</string>
    <string name="login_hint_set_invite_code">邀请码(可不填)</string>
    <string name="login_password_forget">忘记密码</string>
    <string name="login_login_verify">验证码登录</string>
    <string name="login_login_password">密码登录</string>
    <string name="login_login_quickly">一键登录</string>
    <string name="login_login_wechat">微信登录</string>
    <string name="login_click_is_agree"> 点击登录代表你已同意了</string>
    <string name="login_user_protocol">《平台用户协议》</string>
    <string name="login_tags_choice">请选择你喜欢的浏览类别</string>
    <string name="share_label_wechat">微信</string>
    <string name="share_label_qq">QQ</string>
    <string name="share_label_weibo">微博</string>
    <string name="share_label_wechat_moments">朋友圈</string>
    <string name="item_label_forward">转发</string>
    <string name="item_label_download">下载</string>
    <string name="item_label_report">举报</string>
    <string name="share_content">i微影分享</string>
    <string name="share_movie_already_download">该任务已在下载列表</string>
    <string name="share_movie_download_task_running">存在未完成下载任务</string>
    <string name="share_forward_btn_submit_text">转发</string>
    <string name="share_forward_success">转发成功</string>
    <string name="comment_label">评论</string>
    <string name="comment_pattern">回复 %1$s :</string>
    <string name="comment_name_mine">我</string>
    <string name="comment_add_success">评论成功</string>
    <string name="comment_add_error">评论失败</string>
    <string name="comment_repeat_success">评论成功</string>
    <string name="comment_repeat_failed">评论失败</string>
    <string name="comment_del_error">删除失败</string>
    <string name="comment_input_hint">说点什么吧</string>
    <string name="comment_content_is_null_hint">请输入评论内容</string>
    <string name="comment_delete_dialog_content">确定删除评论?</string>
    <string name="comment_load_complete">加载完成</string>
    <string name="download_item_btn_re_download">重新下载</string>
    <string name="download_reload_failed">重新下载失败</string>
    <string name="download_item_btn_cancel">取消</string>
    <string name="upload_confirm_tips">影片正在上传，取消后将无法保存该影片，你确定要取消该操作吗？</string>
    <string name="upload_confirm_sure">确认</string>
    <string name="upload_confirm_continue">继续下载</string>
    <string name="common_report_reason">举报原因</string>
    <string name="common_input_content">请输入内容</string>
</resources>