<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#6000"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/item_wechat_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    style="@style/ShareMenuStyle.Btn"
                    android:src="@drawable/icon_btn_wechat_selector" />

                <TextView
                    style="@style/ShareMenuStyle.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_label_wechat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_qq_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    style="@style/ShareMenuStyle.Btn"
                    android:src="@drawable/icon_btn_qq_selector" />

                <TextView
                    style="@style/ShareMenuStyle.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_label_qq" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_weibo_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    style="@style/ShareMenuStyle.Btn"
                    android:src="@drawable/icon_btn_weibo_selector" />

                <TextView
                    style="@style/ShareMenuStyle.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_label_weibo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_wechat_moments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    style="@style/ShareMenuStyle.Btn"
                    android:src="@drawable/icon_btn_wechat_coments_selector" />

                <TextView
                    style="@style/ShareMenuStyle.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_label_wechat_moments" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_facebook"
                style="@style/ShareMenuStyle.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/icon_btn_facebook_default"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="Facebook" />

            <LinearLayout
                android:id="@+id/item_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    style="@style/ShareMenuStyle.Btn"
                    android:src="@mipmap/icon_btn_zhuanfai_default" />

                <TextView
                    style="@style/ShareMenuStyle.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_label_forward" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    style="@style/ShareMenuStyle.Btn"
                    android:src="@drawable/icon_btn_download_selector" />

                <TextView
                    style="@style/ShareMenuStyle.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_label_download" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    style="@style/ShareMenuStyle.Btn"
                    android:src="@drawable/icon_btn_report_selector" />

                <TextView
                    style="@style/ShareMenuStyle.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_label_report" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
